[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
color-eyre = "0.6.2"
itertools = "0.10.5"
lazy_static = "1.4.0"
nom = "7.1.1"
priority-queue = "1.3.0"
regex = "1.7.0"
